fixed overflow issue

--- a/src/pages/meet/dashboard/Meet.module.css
+++ b/src/pages/meet/dashboard/Meet.module.css
@@ -2,14 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-width:200vh;
+    overflow-x: hidden;
+
 }
 
-.vc_controllers{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 98%;
-}
 
 
 
